<resources>
    <string name="app_name">MobileSales</string>
    <string name="app_desc">Tap, Purchase &amp; Pay</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="error_field_required"><u>Email required</u></string>
    <string name="error_invalid_email"><u>Invalid Email</u></string>
    <string name="error_invalid_password"><u>Invalid Password</u></string>
    <string name="error_ticket_notfound"><u>Ticket not Found</u></string>
    <string name="error_transaction"><u>Transaction failed</u></string>
    <string name="field_required">This field is required! .</string>
    <string name="yor_maximum_limit">Nominal exceeds maximum request </string>
    <string name="nominal_minimum">Nominal is less than  </string>

    <string name="header_home">Home</string>
    <string name="header_topup">Top Up</string>
    <string name="header_guestinfo">Guest Information</string>
    <string name="header_order_summary">Order Summary</string>
    <string name="header_order_complete">Order Complete</string>

    <string name="product">Product</string>
    <string name="order_check">Order Check</string>
    <string name="credit">Credit</string>
    <string name="notification">Message</string>
    <string name="billing">Billing</string>
    <string name="my_billing">My Billing</string>
    <string name="billing_information">Billing Information</string>
    <string name="report">Report</string>
    <string name="close">Close</string>
    <string name="store">Store</string>
    <string name="my_account">My Account</string>
    <string name="name">Name</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="approved_date">Approved Date</string>
    <string name="in_progress">In Progress</string>
    <string name="complete">Complete</string>
    <string name="note">Note</string>
    <string name="created_at">Created at</string>

    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="dob">Date of Birth</string>
    <string name="city">City</string>
    <string name="current_password">Old Password</string>
    <string name="n_password">New Password</string>
    <string name="password">Password</string>
    <string name="account_number">Account Number</string>
    <string name="allocation_to_account">Allocation to Account</string>
    <string name="address">Address</string>
    <string name="phone_number_1">Phone Number 1</string>
    <string name="phone_number_2">Phone Number 2</string>
    <string name="gender">Gender</string>
    <string name="id_type">Identity Type</string>
    <string name="id_number">Identity Number</string>
    <string name="merchant_code">Merchant Code</string>
    <string name="merchant">Merchant</string>
    <string name="merchant_information">Merchant Information</string>
    <string name="user_account">User Account</string>
    <string name="user_information">User Information</string>
    <string name="balance_">Balance : </string>
    <string name="total_transaction">Total Transaction (this month) : </string>
    <string name="total_transaction_this_month">Transaction (this month) : </string>
    <string name="total_sales_">Total Amount (this month) : </string>
    <string name="total_sales">Total Sales</string>
    <string name="top_up_">Top Up  </string>
    <string name="top_up">Top Up</string>
    <string name="top_up_request">Request Balance</string>
    <string name="booking_code">Booking Code</string>
    <string name="booking">Booking</string>
    <string name="code">Code</string>
    <string name="trans_code">Transaction Code</string>
    <string name="trans_status">Transaction Status</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="booking_time">Booking Time</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="fee">Fee</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="payable">Payable</string>
    <string name="payment">Payment</string>
    <string name="nominal">Nominal</string>
    <string name="account_name">Account Name</string>
    <string name="method">Method</string>
    <string name="sender">Sender</string>
    <string name="to_account">To Account</string>
    <string name="recipient">Recipient</string>
    <string name="report_param">Report parameter</string>
    <string name="detail_top_up">Detail Top Up</string>
    <string name="category">Category</string>
    <string name="select_category">Please Select Category</string>
    <string name="visit_date">Visit Date</string>
    <string name="description">Description</string>
    <string name="top_up_allocation">Top Up (Allocation)</string>
    <string name="my_balance">My Balance</string>
    <string name="balance">Balance</string>
    <string name="to">To</string>
    <string name="user">User</string>
    <string name="selected_date">Selected Date</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="adult">Adult</string>
    <string name="child">Child</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="total_bill">Total Bill</string>
    <string name="sub_total">Sub Total</string>
    <string name="sales">Sales</string>
    <string name="new_sales">New Sales</string>
    <string name="new_store">New Store</string>
    <string name="confirmation">Confirmation</string>
    <string name="store_information">Store Information</string>
    <string name="payment_information">Payment Information</string>
    <string name="payment_method">Payment Method</string>
    <string name="transaction_detial">Transaction Detail</string>
    <string name="request_history">Request History</string>
    <string name="maximum_request">Maximum Request</string>
    <string name="current_bill">Current bill</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="detail_billing">Detail Billing</string>
    <string name="initial_bill">Initial Bill</string>
    <string name="final_bill">Final Bill</string>
    <string name="billing_payment">Billing Payment</string>
    <string name="billing_id">Billing ID</string>
    <string name="subtotal">Subtotal</string>
    <string name="pay_now">Bayar Sekarang</string>

    <string name="ticket_events">Ticket Events</string>
    <string name="event_detail">Event Detail</string>
    <string name="order_detail">Order Detail</string>
    <string name="order">Order</string>
    <string name="venue_event_date">Venue and Event Date</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="reviews_rating">Reviews and Rating</string>
    <string name="total_payment">Total Payment</string>
    <string name="top_up_payment">TOP UP Payment</string>
    <string name="empty_data">Empty Data</string>
    <string name="order_notification">Order Notification</string>


    <string name="button_continue">CONTINUE</string>
    <string name="button_save">SAVE</string>
    <string name="button_save_change">SAVE CHANGE</string>
    <string name="button_allocation">ALLOCATION</string>
    <string name="button_book_now">BOOK NOW</string>
    <string name="button_get_ticket">GET TICKET</string>
    <string name="button_buy">BUY</string>
    <string name="button_pay">PAY</string>
    <string name="button_finish">FINISH</string>
    <string name="button_check">CHECK</string>
    <string name="button_send">SEND</string>
    <string name="button_filter">FILTER</string>
    <string name="button_cancel">CANCEL</string>

    <string name="please_complete_guest">Please complete an guest information form</string>
    <string name="please_complete_userinfo">Please complete an user information</string>
    <string name="please_complete_storeinfo">Please complete an store information</string>
    <string name="please_complete_merchantinfo">Please complete an company information</string>
    <string name="current_password_not_match">Your old password was entered incorrectly</string>
    <string name="confirm_password_not_match">Confirmation password didn\'t match</string>
    <string name="invalid_langth_password">Password at least 6 characters</string>
    <string name="failed_to_save">Failed to save, Please try again!</string>
    <string name="failed_to_send_request">Failed to send request, Please try again!</string>
    <string name="failed_to_allocation">Failed to send Allocation, Please try again!</string>
    <string name="failed_to_delete">Failed to delete, Please try again!</string>
    <string name="store_success_created">Store has been created</string>
    <string name="sales_success_created">Sales has been created</string>
    <string name="transaction_success">Transaction Success</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="failed_to_load_store">Failed to load store, Please try again!</string>
    <string name="failed_to_load_sales">Failed to load sales, Please try again!</string>
    <string name="please_give_permision">Please give a required permission for access this apps!</string>
    <string name="update_success">Update success</string>
    <string name="allocation_success">Allocation success</string>
    <string name="please_wait">Please Wait...</string>
    <string name="do_you_really_want_delete">Do you really want to Delete </string>
    <string name="your_request_balance_sent">Your balance request has been sent</string>
    <string name="you_have_pending_transaction">You have pending transaction</string>


    <string name="scanning_barcode">Scanning Barcode</string>
    <string name="data_not_found">Data not found</string>
    <string name="check_connection">Checking connection</string>


    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ktp">ID Card</string>
    <string name="sim">Driving Licence</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
</resources>
