<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="g.rezza.moch.mobilesales.Activity.Report.ParameterActivity">

    <RelativeLayout
        android:id="@+id/rvly_header_00"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imvw_back_00"
            android:layout_width="@dimen/size_35dp"
            android:layout_height="@dimen/size_35dp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextView.Black.Montserrat.Bold"
            android:textSize="@dimen/size_16sp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/size_20dp"
            android:layout_toEndOf="@+id/imvw_back_00"
            android:text="Parameter" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rvly_sparator_00"
        android:layout_below="@+id/rvly_header_00"
        android:layout_width="match_parent"
        android:background="@color/color_orange_light"
        android:layout_height="1dp">
    </RelativeLayout>

    <LinearLayout
        android:padding="@dimen/size_10dp"
        android:layout_below="@+id/rvly_sparator_00"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.Black.Montserrat"
            android:textSize="@dimen/size_14sp"
            android:layout_marginBottom="@dimen/size_5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_date" />

        <g.rezza.moch.mobilesales.component.MyDatePicker
            android:id="@+id/dpck_start_00"
            android:layout_marginBottom="@dimen/size_20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/TextView.Black.Montserrat"
            android:textSize="@dimen/size_14sp"
            android:layout_marginBottom="@dimen/size_5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_date" />

        <g.rezza.moch.mobilesales.component.MyDatePicker
            android:id="@+id/dpck_end_00"
            android:layout_marginBottom="@dimen/size_20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/TextView.Black.Montserrat"
            android:textSize="@dimen/size_14sp"
            android:layout_marginBottom="@dimen/size_5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store" />

        <g.rezza.moch.mobilesales.component.MySimpleSpinner
            android:id="@+id/spnr_store_00"
            android:layout_marginBottom="@dimen/size_20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/TextView.Black.Montserrat"
            android:textSize="@dimen/size_14sp"
            android:layout_marginBottom="@dimen/size_5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <g.rezza.moch.mobilesales.component.MySimpleSpinner
            android:id="@+id/spnr_status_00"
            android:layout_marginBottom="@dimen/size_20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/bbtn_action_00"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_45dp"
        android:background="@drawable/button_login"
        style="@style/TextView.White.Montserrat"
        android:textSize="@dimen/size_14sp"
        android:text="@string/button_filter" />
</RelativeLayout>
