<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="g.rezza.moch.mobilesales.Activity.Product.EventCategoryActivity">


    <include
        android:id="@+id/incl_header"
        layout="@layout/master_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/lnly_category_01"
        android:layout_below="@+id/incl_header"
        android:background="@color/mdtp_white"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/size_5dp"
        android:layout_marginBottom="@dimen/size_10dp"
        android:padding="@dimen/size_5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/category"
            style="@style/TextView.Black.Montserrat.Bold"
            android:textSize="@dimen/size_16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/select_category"
            android:layout_marginTop="@dimen/size_10dp"
            style="@style/TextView.Black.Montserrat"
            android:textSize="@dimen/size_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lnly_body_00"
        android:layout_below="@id/lnly_category_01"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/lsvw_category_00"
            android:divider="@null"
            android:padding="@dimen/size_5dp"
            android:background="@color/mdtp_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:id="@+id/rvly_qty_00"
            android:layout_marginTop="@dimen/size_10dp"
            android:background="@color/mdtp_white"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:minHeight="@dimen/size_50dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="@dimen/size_10dp"
                android:padding="@dimen/size_10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txvw_date_hdr_00"
                    android:text="@string/selected_date"
                    android:layout_marginTop="@dimen/size_5dp"
                    style="@style/TextView.Black.Montserrat.Bold"
                    android:textSize="@dimen/size_16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_marginTop="@dimen/size_5dp"
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_45dp"
                    android:orientation="horizontal">

                    <g.rezza.moch.mobilesales.component.MyDatePicker
                        android:id="@+id/rvly_date_00"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <g.rezza.moch.mobilesales.component.MyTimePicker
                        android:id="@+id/rvly_time_00"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <TextView
                    android:text="Jumlah pembelian"
                    android:layout_marginTop="@dimen/size_20dp"
                    style="@style/TextView.Black.Montserrat.Bold"
                    android:textSize="@dimen/size_16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_marginTop="@dimen/size_15dp"
                    android:id="@+id/lnly_category_00"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rvly_footer_00"
        android:layout_alignParentBottom="true"
        android:background="@color/mdtp_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_110dp">

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="10"
            android:padding="@dimen/size_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/subtotal"
                style="@style/TextView.Black.Montserrat.Bold"
                android:textSize="@dimen/size_16sp"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txvw_total_00"
                android:text="IDR 200.000"
                android:gravity="right"
                style="@style/TextView.Orange.Montserrat.Bold"
                android:textSize="@dimen/size_22sp"
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/bbtn_action_00"
            android:layout_margin="@dimen/size_10dp"
            android:text="@string/pay_now"
            android:textAllCaps="false"
            android:textSize="@dimen/size_20sp"
            android:layout_alignParentBottom="true"
            style="@style/TextView.White.Montserrat"
            android:background="@drawable/button_orange"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45dp" />


    </RelativeLayout>

</RelativeLayout>
