<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="g.rezza.moch.mobilesales.Activity.StoreActivity">

    <include
        android:id="@+id/incl_body"
        layout="@layout/master_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:visibility="visible"
        android:layout_below="@+id/incl_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:background="@color/colorgrey_01"
        android:layout_above="@+id/bbtn_action_00">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_5dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_5dp_white"
                android:padding="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_15dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginBottom="@dimen/size_15dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:background="@drawable/editext_check_00"
                        android:id="@+id/edtx_transcode_00"
                        android:padding="@dimen/size_5dp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_45dp"
                        android:hint="@string/trans_code"
                        android:inputType="text"
                        android:maxLines="1"
                        android:layout_toStartOf="@+id/rvly_check_00" />

                    <RelativeLayout
                        android:id="@+id/rvly_check_00"
                        android:layout_marginTop="@dimen/size_1dp"
                        android:background="@drawable/button_grey"
                        android:layout_width="@dimen/size_65dp"
                        android:layout_height="@dimen/size_43dp"
                        android:layout_alignParentRight="true"
                        android:padding="@dimen/size_2dp" >

                        <ImageView
                            android:src="@mipmap/ic_scanner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rvly_find_00"
                    android:background="@drawable/button_orange"
                    android:layout_width="match_parent"
                    android:padding="@dimen/size_5dp"
                    android:focusable="true"
                    android:layout_height="@dimen/size_45dp">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/TextView.White.Montserrat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/button_check" />

                </RelativeLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/txvw_payinfo_00"
                style="@style/TextView.Black.Montserrat"
                android:textSize="@dimen/size_16sp"
                android:layout_marginBottom="@dimen/size_5dp"
                android:text="@string/order_notification"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/lnly_payinfo_00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_5dp_white"
                android:layout_marginBottom="@dimen/size_5dp"
                android:orientation="vertical">

                <android.support.design.widget.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/incl_body"
                    android:background="@drawable/rounded_5dp_blue"
                    android:elevation="6dp"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_below="@id/tab_layout"/>


            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

    <Button
        android:visibility="gone"
        android:id="@+id/bbtn_action_00"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_45dp"
        android:background="@drawable/button_login"
        style="@style/TextView.White.Montserrat"
        android:textSize="@dimen/size_14sp"
        android:text="@string/button_pay" />

</RelativeLayout>
