<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="g.rezza.moch.mobilesales.Activity.Product.EventGuestActivity">

    <Button
        android:id="@+id/bbtn_action_00"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_45dp"
        android:background="@drawable/button_login"
        style="@style/TextView.White.Montserrat"
        android:textSize="@dimen/size_14sp"
        android:text="@string/button_continue" />


    <LinearLayout
        android:layout_below="@+id/incl_header"
        android:background="@color/colorgrey_01"
        android:layout_above="@+id/bbtn_action_00"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:background="@color/color_blue_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_5dp"
            android:layout_marginBottom="@dimen/size_15dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txvw_name_00"
                style="@style/TextView.White.Montserrat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_5dp"
                android:textSize="@dimen/size_14sp"
                android:gravity="center"
                android:text="ALINA BARAZ PEKING DUK THE PAPER KITES" />

        </LinearLayout>

        <ScrollView
            android:layout_marginLeft="@dimen/size_5dp"
            android:layout_marginRight="@dimen/size_5dp"
            android:layout_marginBottom="@dimen/size_10dp"
            android:padding="@dimen/size_5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:text="@string/please_complete_guest"
                    android:textSize="@dimen/size_12sp"
                    android:textStyle="italic"
                    android:layout_marginBottom="@dimen/size_5dp"
                    style="@style/TextView.Black.Montserrat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:background="@drawable/rounded_5dp_white"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <g.rezza.moch.mobilesales.component.EditextStandardC
                        android:id="@+id/edtx_fullname_00"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <g.rezza.moch.mobilesales.component.EditextStandardC
                        android:id="@+id/edtx_email_00"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <g.rezza.moch.mobilesales.component.EditextStandardC
                        android:id="@+id/edtx_phone_00"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <g.rezza.moch.mobilesales.component.SimpleDatePicker
                        android:id="@+id/smpr_date_00"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txip_00"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/edtx_city_00"
                            style="@style/EditText.Login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/city"
                            android:imeActionLabel="Text"
                            android:imeOptions="actionUnspecified"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textSize="@dimen/size_14sp"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>
    <include
        android:id="@+id/incl_header"
        layout="@layout/master_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
